--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,18 +18,16 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Docker Login (NO BUILDX)
+      - name: Docker Login to ACR (Service Principal)
         run: |
-          echo "Logging into ACR..."
-          echo ${{ fromJson(secrets.AZURE_CREDENTIALS).clientSecret }} | docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} \
-            -u ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }} --password-stdin
+          echo "${{ fromJson(secrets.AZURE_CREDENTIALS).clientSecret }}" | docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} \
+            -u "${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}" --password-stdin
 
-      - name: Build Docker Image (classic builder)
+      - name: Build Docker Image
         run: |
           echo "Workspace files:"
           ls -R .
           docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/springboot-config:v1 .
-
       - name: Push Docker Image
         run: |
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/springboot-config:v1
